...
            "state": "translated",
            "value": "Em alerta"
          }
        }
      }
    },
    "Próximas": {
      "localizations": {
        "pt-BR": {
          "stringUnit": {
            "state": "translated",
            "value": "Próximas"
          }
        }
      }
    },
    "Encerradas": {
      "localizations": {
        "pt-BR": {
          "stringUnit": {
            "state": "translated",
            "value": "Encerradas"
          }
...
            "state": "translated",
            "value": "Acompanhar turno"
          }
        }
      }
    },
    "Chegada": {
      "localizations": {
        "pt-BR": {
          "stringUnit": {
            "state": "translated",
            "value": "Chegada"
          }
...
